<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/help_game_mode">
        <Preference android:title=""
            android:selectable="false"
            android:icon="@drawable/ic_person_yellow1"
            android:summary="@string/help_single_player"/>
        <Preference android:title=""
            android:selectable="false"
            android:icon="@drawable/ic_person_yellow2"
            android:summary="@string/help_duo_player"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/help_game_difficulty">

    <Preference android:title=""
        android:selectable="false"
        android:icon="@drawable/ic_star_blue_36dp"
        android:summary="@string/help_game_difficulty_summary"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/custom_deck_options">

        <Preference android:title=""
            android:selectable="false"
            android:icon="@drawable/secuso_not_found"
            android:summary="@string/help_custom_deck"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/menu_highscore">

        <Preference android:title=""
            android:selectable="false"
            android:icon="@drawable/highscore_hard_bar"
            android:summary="@string/help_highscore"/>
    </PreferenceCategory>



</PreferenceScreen>