<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item android:id="@+id/menu_main" android:icon="@drawable/ic_home"
           android:iconTint="@color/textColor"
            android:title="@string/menu_menu" />
        <item android:id="@+id/menu_highscore" android:icon="@drawable/image_highscore"
            android:title="@string/menu_highscore"
            android:iconTint="@color/textColor"
            />
        <item android:id="@+id/menu_statistics" android:icon="@drawable/ic_statistics"
            android:title="@string/menu_statistics"
            android:iconTint="@color/textColor"
            />
    </group>
    <group android:id="@+id/group4">
        <item android:id="@+id/menu_settings" android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"
            android:iconTint="@color/textColor"
            />


    </group>
    <group android:id="@+id/group5">
        <item android:id="@+id/about" android:icon="@drawable/ic_about"
            android:title="@string/menu_about"
            android:iconTint="@color/textColor"
            />


    </group>

</menu>
